################################################################################
## Variable de fichiers
################################################################################

INCLUDES = -I../include -I$(top_srcdir)/common
noinst_LIBRARIES = libfigures.a

FIGURESSCR = Forme.cpp FormeOuverte.cpp FormeFermee.cpp \
	Ligne.cpp Rectangle.cpp Polygone.cpp Ellipse.cpp \
	ArcEllipse.cpp Arete.cpp

# ParticulePropagative
libfigures_a_SOURCES = $(FIGURESSCR)











