################################################################################
## Variable de fichiers
################################################################################

INCLUDES = -I../include -I$(top_srcdir)/common
noinst_LIBRARIES = libmoteur.a

MOTEURSRC = Direction.cpp Requete.cpp Couleur.cpp  \
	Particule.cpp Cellule.cpp CelluleSansParticule.cpp CelluleParoi.cpp \
	CelluleHorsScene.cpp CelluleAvecParticule.cpp CelluleGeneratrice.cpp \
	Ponderation.cpp Phase.cpp RegleExclusion.cpp Automate.cpp

# ParticulePropagative
libmoteur_a_SOURCES = $(MOTEURSRC)











