################################################################################
## Variable de fichiers
################################################################################

INCLUDES = -I../include -I../../figures/include -I../../moteur/include -I$(top_srcdir)/common
noinst_LIBRARIES = libscene.a

SCENESCR = ContientPhase.cpp ContientHorsScene.cpp Zonage.cpp  \
	Coloration.cpp Scene.cpp SceneFigures.cpp PlanHexagonal.cpp 

libscene_a_SOURCES = $(SCENESCR)











